--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://terrencesiau0304.github.io/FIT2101/",
+  "homepage": "https://terrencesiau0304.github.io/",
   "proxy": "http://localhost:5000",
   "name": "project-management-dashboard",
   "version": "0.1.0",
@@ -26,7 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
